@@ -1,3 +1,9 @@
+2021-02-20  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/galyleo/shell/Magic.java:
+	Provide static MagicMap member for receive(String,String,String)
+	method.
+
 2021-02-19  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/galyleo/server/Message.java:
